<resources>
    <string name="app_name">inventoryapp</string>
    <string name="time_item">02-05-2022, 12:12</string>
    <string name="text_time">Date/Time</string>
    <string name="jumlah_stock">150</string>
    <string name="item_inventory_name">RV110W</string>
    <string name="harga_item">Rp2.500.000</string>
    <string name="desc_item">Cisco</string>
    <string name="text_location">Location</string>
    <string name="location_item">My Warehouse 1 - Rack 2</string>
    <string name="text_search">Search</string>
    <string name="tanggaldashboard">24 Juni</string>
    <string name="stockin_text">Stock In</string>

    // Dropdown Kategori Items
    <string-array name="kategori_items">
        <item>Router</item>
        <item>Switch</item>
        <item>Bridge</item>
        <item>Modem</item>
        <item>Repeater</item>
    </string-array>

    // Dropdown Dari/Move Items
    <string-array name="warehouse_items">
        <item>Warehouse Sementara</item>
        <item>Warehouse 1</item>
        <item>Warehouse 2</item>
        <item>Warehouse 3</item>
    </string-array>

</resources>