<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_row_item_inventory"
        android:layout_width="340dp"
        android:layout_height="105dp"
        app:cardCornerRadius="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_image_item"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:src="@drawable/img_router"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_row_inventory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/sfprobold"
                android:text="@string/item_inventory_name"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/iv_image_item"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_desc_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:fontFamily="@font/sfproregular"
                android:text="@string/desc_item"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_row_inventory" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_harga_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/sfproregular"
                android:text="@string/harga_item"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_location_item"
                app:layout_constraintStart_toEndOf="@+id/tv_location_item"
                app:layout_constraintTop_toBottomOf="@+id/iv_bg_jumlah_stock" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_bg_jumlah_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bg_jumlah_stock"
                app:layout_constraintBottom_toBottomOf="@+id/tv_row_inventory"
                app:layout_constraintEnd_toEndOf="@+id/tv_harga_item"
                app:layout_constraintTop_toTopOf="@+id/tv_row_inventory" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_jumlah_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfproregular"
                android:text="@string/jumlah_stock"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_bg_jumlah_stock"
                app:layout_constraintEnd_toEndOf="@+id/iv_bg_jumlah_stock"
                app:layout_constraintStart_toStartOf="@+id/iv_bg_jumlah_stock"
                app:layout_constraintTop_toTopOf="@+id/iv_bg_jumlah_stock" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/sfproregular"
                android:text="@string/text_location"
                android:textSize="6sp"
                app:layout_constraintStart_toStartOf="@+id/tv_row_inventory"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc_item" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_location_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/sfproregular"
                android:text="@string/location_item"
                android:textColor="@color/black"
                android:textSize="10sp"
                app:fontFamily="@font/sfproregular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_row_inventory" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>